adjusted starting positions

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             }
           ]
           map = new google.maps.Map(document.getElementById('map'), {
-            center: {lat: 42.2814, lng: -83.7483},
-            zoom: 14,
+            center: {lat: 42.292675 , lng: -83.715126},
+            zoom: 18,
             disableDefaultUI: true,
-            maxZoom: 20,
-            minZoom: 13
+            maxZoom: 28,
+            minZoom: 16
           });
           var imageBounds = {
             north: 42.29353,
@@ -41,12 +41,27 @@
           var customMapType = new google.maps.StyledMapType(featureOpts, styledMapOptions);
 
           map.mapTypes.set('custom_style', customMapType);
-          
-          Overlay = new google.maps.GroundOverlay(
-            'images/grand_map.png',
-            imageBounds);
+
+          Overlay = new google.maps.GroundOverlay('images/grand_map.png', imageBounds);
           Overlay.setMap(map);
         }
+
+        var allowedBounds = new google.maps.LatLngBounds(
+          new google.maps.LatLng(42.2814, -83.7483), 
+          new google.maps.LatLng(42.27969, -83.74533)
+        );
+        var lastValidCenter = map.getCenter();
+
+        google.maps.event.addListener(map, 'center_changed', function() {
+          if (allowedBounds.contains(map.getCenter())) {
+            // still within valid bounds, so save the last valid position
+            lastValidCenter = map.getCenter();
+            return; 
+          }
+
+          // not valid anymore => return to last valid position
+         map.panTo(lastValidCenter);
+        });
 
       </script>
         <script async defer
