fixed issue with map

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
       </script>
         <script async defer
-           src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap">
+           src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAH1Lv6E9nEjrir5p8wCocKxkU7VVTxck4&callback=initMap">
         </script>
       </body>
   </html>
